--- a/app/src/main/res/layout/fragment_settings_tab.xml
+++ b/app/src/main/res/layout/fragment_settings_tab.xml
@@ -21,7 +21,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/settingsText" />
 
-    <Switch
+    <com.google.android.material.switchmaterial.SwitchMaterial
         android:id="@+id/dark_mode"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
