--- a/app/src/main/res/layout/fragment_check.xml
+++ b/app/src/main/res/layout/fragment_check.xml
@@ -27,13 +27,13 @@
 
     <com.google.android.material.button.MaterialButton
 
-        android:id="@+id/addBtn"
+        android:id="@+id/checkBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginLeft="40dp"
         android:layout_marginTop="50dp"
-        android:text="@string/add_category"
+        android:text="@string/title_check_number"
         android:textColor="@color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/isSpamTextView" />
@@ -57,6 +57,6 @@
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addBtn" />
+        app:layout_constraintTop_toBottomOf="@+id/checkBtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
