--- a/app/src/main/res/layout/fragment_check.xml
+++ b/app/src/main/res/layout/fragment_check.xml
@@ -18,7 +18,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.appcompat.widget.AppCompatEditText
+        <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/numberOfPhone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
