--- a/app/src/main/res/layout/fragment_settings_tab.xml
+++ b/app/src/main/res/layout/fragment_settings_tab.xml
@@ -6,6 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".view.ui.settings.SettingsFragment">
 
+    <com.google.android.material.switchmaterial.SwitchMaterial
+        android:id="@+id/blocking_mode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="168dp"
+        android:text="@string/blocking_mode"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/shareButton" />
+
     <Button
         android:id="@+id/shareButton"
         android:layout_width="wrap_content"
