--- a/app/src/main/res/layout/fragment_edit_number.xml
+++ b/app/src/main/res/layout/fragment_edit_number.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.Caller_ID.ui.spamProtection.AddNumberActivity">
+    android:layout_height="match_parent">
 
 
     <com.google.android.material.textfield.TextInputLayout
@@ -33,7 +31,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="44dp"
-        android:layout_marginLeft="44dp"
         android:layout_marginTop="44dp"
 
         android:text="@string/this_is_not_spam"
